--- a/springboot-dubbo-client/pom.xml
+++ b/springboot-dubbo-client/pom.xml
@@ -47,5 +47,10 @@
             <version>4.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
     </dependencies>
 </project>
