--- a/springboot-dubbo-client/src/main/resources/application.properties
+++ b/springboot-dubbo-client/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-## 避免和 server 工程端口冲突
+## \u907F\u514D\u548C server \u5DE5\u7A0B\u7AEF\u53E3\u51B2\u7A81
 server.port=8081
 
-## Dubbo 服务消费者配置
+## Dubbo \u670D\u52A1\u6D88\u8D39\u8005\u914D\u7F6E
 spring.dubbo.application.name=consumer
-spring.dubbo.registry.address=zookeeper://127.0.0.1:2181
+spring.dubbo.registry.address=zookeeper://129.28.191.160:2181
 spring.dubbo.scan=org.spring.springboot.dubbo
