--- a/springboot-dubbo-server/src/main/resources/application.properties
+++ b/springboot-dubbo-server/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-## Dubbo 服务提供者配置
+## Dubbo \u670D\u52A1\u63D0\u4F9B\u8005\u914D\u7F6E
 spring.dubbo.application.name=provider
-spring.dubbo.registry.address=zookeeper://127.0.0.1:2181
+spring.dubbo.registry.address=zookeeper://129.28.191.160:2181
 spring.dubbo.protocol.name=dubbo
 spring.dubbo.protocol.port=20880
 spring.dubbo.scan=org.spring.springboot.dubbo
+server.port=8082
